--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,7 @@
          version="5.0">
 
   <display-name>Archetype Created Web Application</display-name>
+  <session-config>
+    <session-timeout>1440</session-timeout>
+  </session-config>
 </web-app>
